# pypickup

./: .gitignore  LICENSE  README.md  pypi-download.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml  python-publish-TEST.yml  python-testing.yml
pypi_cache/: __init__.py  __main__.py  cli.py  pypi-download.py  pypiCacheManager.py
pypi_cache/cmd/: __init__.py  add.py  remove.py  update.py
pypi_cache/settings/: wheelFilters.py
pypi_cache/utils/: htmlManager.py
pypickup/: __init__.py  __main__.py  cli.py  controller.py
pypickup/cmd/: __init__.py  add.py  config.py  list.py  rebuildIndexEP.py  remove.py  update.py
pypickup/settings/: wheelFilters.py  wheelFiltersSettings.yaml
pypickup/utils/: htmlManager.py  networkManager.py
src/pypi-cache/: pypi-download.py
tests/controller/: test_pypLocalController.py
